--- a/BaseDemo/SplashView/PreviewWelcomeViewController.xib
+++ b/BaseDemo/SplashView/PreviewWelcomeViewController.xib
@@ -13,9 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PreviewWelcomeViewController" customModule="BaseDemo" customModuleProvider="target">
             <connections>
                 <outlet property="constraintIvUser" destination="SL3-9w-LHb" id="3RW-JL-AS8"/>
-                <outlet property="ivStick" destination="37h-wv-2vw" id="nMS-Pb-JEj"/>
+                <outlet property="ivAgree" destination="37h-wv-2vw" id="SwU-zU-Ez8"/>
                 <outlet property="ivUser" destination="Yue-hs-puh" id="cSQ-ne-nEP"/>
                 <outlet property="vCircle" destination="Xpo-gC-aCR" id="mVG-mN-9Rn"/>
+                <outlet property="vLarge" destination="bNK-fV-poc" id="TM4-OO-0ey"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -24,31 +25,39 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bNK-fV-poc">
+                    <rect key="frame" x="37" y="278" width="340" height="340"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="340" id="1k7-fQ-Tna"/>
+                        <constraint firstAttribute="width" constant="340" id="gUK-QR-2FX"/>
+                    </constraints>
+                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xpo-gC-aCR">
-                    <rect key="frame" x="57" y="298" width="300" height="300"/>
+                    <rect key="frame" x="82" y="323" width="250" height="250"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yue-hs-puh">
-                            <rect key="frame" x="121" y="100" width="58" height="58"/>
-                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="avatar" translatesAutoresizingMaskIntoConstraints="NO" id="Yue-hs-puh">
+                            <rect key="frame" x="96" y="60" width="58" height="58"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="58" id="pdf-qT-KL0"/>
                                 <constraint firstAttribute="width" constant="58" id="vNM-lI-9hO"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nguyen Van A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZVw-im-Mhz">
-                            <rect key="frame" x="96" y="176" width="108" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="62" y="136" width="126" height="24"/>
+                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sales Manager" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uyg-Q2-j0X">
-                            <rect key="frame" x="93.5" y="212" width="113" height="21"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="72" y="175" width="106" height="19.5"/>
+                            <fontDescription key="fontDescription" type="system" weight="thin" pointSize="16"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="37h-wv-2vw">
-                            <rect key="frame" x="125" y="253" width="50" height="50"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="images" translatesAutoresizingMaskIntoConstraints="NO" id="37h-wv-2vw">
+                            <rect key="frame" x="100" y="214.5" width="50" height="50"/>
                             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="50" id="cQ8-cD-Zso"/>
@@ -60,25 +69,25 @@
                     <constraints>
                         <constraint firstItem="ZVw-im-Mhz" firstAttribute="centerX" secondItem="Xpo-gC-aCR" secondAttribute="centerX" id="7Yw-Fx-EO7"/>
                         <constraint firstItem="ZVw-im-Mhz" firstAttribute="top" secondItem="Yue-hs-puh" secondAttribute="bottom" constant="18" id="Hrg-Q7-a34"/>
-                        <constraint firstItem="Yue-hs-puh" firstAttribute="top" secondItem="Xpo-gC-aCR" secondAttribute="top" constant="100" id="SL3-9w-LHb"/>
+                        <constraint firstItem="Yue-hs-puh" firstAttribute="top" secondItem="Xpo-gC-aCR" secondAttribute="top" constant="60" id="SL3-9w-LHb"/>
                         <constraint firstItem="Uyg-Q2-j0X" firstAttribute="top" secondItem="ZVw-im-Mhz" secondAttribute="bottom" constant="15" id="bCu-yr-x5w"/>
                         <constraint firstItem="Uyg-Q2-j0X" firstAttribute="centerX" secondItem="Xpo-gC-aCR" secondAttribute="centerX" id="boz-nB-m2o"/>
                         <constraint firstItem="Yue-hs-puh" firstAttribute="centerX" secondItem="Xpo-gC-aCR" secondAttribute="centerX" id="cYt-iy-8sK"/>
                         <constraint firstItem="37h-wv-2vw" firstAttribute="centerX" secondItem="Xpo-gC-aCR" secondAttribute="centerX" id="fjx-pz-Yda"/>
-                        <constraint firstAttribute="width" constant="300" id="rDW-Vy-Y5n"/>
+                        <constraint firstAttribute="width" constant="250" id="rDW-Vy-Y5n"/>
                         <constraint firstAttribute="width" secondItem="Xpo-gC-aCR" secondAttribute="height" multiplier="1:1" id="wz3-aX-6ht"/>
                         <constraint firstItem="37h-wv-2vw" firstAttribute="top" secondItem="Uyg-Q2-j0X" secondAttribute="bottom" constant="20" id="ywJ-e5-c8L"/>
                     </constraints>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BaseBS_04" translatesAutoresizingMaskIntoConstraints="NO" id="u8R-Fc-mBV">
-                    <rect key="frame" x="170" y="814" width="74" height="25"/>
+                    <rect key="frame" x="170" y="782" width="74" height="25"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="25" id="1ae-Vi-WYa"/>
                         <constraint firstAttribute="width" constant="74" id="Ruq-p9-ttv"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@Copyright 2020 BaseBS. All rights reserved." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fkd-zC-xmY">
-                    <rect key="frame" x="107.5" y="859" width="199.5" height="11"/>
+                    <rect key="frame" x="107.5" y="827" width="199.5" height="11"/>
                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="9"/>
                     <color key="textColor" red="0.4392156862745098" green="0.4392156862745098" blue="0.4392156862745098" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
@@ -86,9 +95,11 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="bNK-fV-poc" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="32P-Dn-7G0"/>
                 <constraint firstItem="Fkd-zC-xmY" firstAttribute="top" secondItem="u8R-Fc-mBV" secondAttribute="bottom" constant="20" id="5pQ-gD-f9Z"/>
+                <constraint firstItem="bNK-fV-poc" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="KTC-HW-WES"/>
                 <constraint firstItem="Xpo-gC-aCR" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="P6r-om-ANB"/>
-                <constraint firstItem="Fkd-zC-xmY" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" constant="8" id="Wix-NN-I63"/>
+                <constraint firstItem="Fkd-zC-xmY" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" constant="-24" id="Wix-NN-I63"/>
                 <constraint firstItem="Fkd-zC-xmY" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Wtg-2Z-FCs"/>
                 <constraint firstItem="u8R-Fc-mBV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ifh-Wt-6Hg"/>
                 <constraint firstItem="Xpo-gC-aCR" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="uBW-GW-ao2"/>
@@ -99,5 +110,7 @@
     </objects>
     <resources>
         <image name="BaseBS_04" width="74" height="25"/>
+        <image name="avatar" width="58" height="58"/>
+        <image name="images" width="225" height="225"/>
     </resources>
 </document>
